<resources>
    <string name="app_name">      Spinner </string>
    <string name="LoginBtn">Login</string>
    <string name="LoginText">Lets Get Started !</string>
    <string name="Emailtxt">Enter Email</string>
    <string name="PasswordTxt">Enter Password</string>
    <string name="UserProfiletxt">User Profile</string>
    <string name="UpdateProfileButton">Update</string>
    <string name="DeleteProfileButton">Delete</string>
    <string name="getEmailInput">XXXXXXX@XXXXXX.com</string>
    <string name="getUserName">XXXXXX XXXXXXXX</string>
    <string name="getUserPassword" />
    <string name="maleRadioButton">Male</string>
    <string name="femaleRadioButton">Female</string>
    <string name="createAccountBtn">Submit</string>
    <string name="switchX" />
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doae</string>
    <string name="getCyclerID">Cycler ID</string>
    <string name="SubmitBtn">Submit</string>
    <string name="getUserCreditCardNo" />
    <string name="getUserNIC" />
    <string name="privacyPolicyText">Agree to privacy and policy terms</string>
    <string name="getUserAddresss" />
    <string name="getUserMobileNo" />
    <string name="getBikeID">"Enter Order ID : "</string>
    <string name="searchBtn">Go</string>
    <string name="homeBtn">Home</string>
    <string name="deleteOrder">Delete</string>
    <string name="creditCard">Credit Card</string>
    <string name="LoginMainGreeting">Spinner</string>

    <string-array name="bikes">
        <item>BMX Drift -  Price 12K</item>
        <item>TomaHawk Xander - Price 34K</item>
        <item>Catalina Express -Price 50K</item>
        <item>Lion Rage - Price 32K</item>
        <item>BigSur Blue - Price 56K</item>
    </string-array>
</resources>